--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,155 @@ a.btn_total {
 }
 
 /* total_menu_z */
-.total_menu_z {}
+.total_menu_z {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 0%;
+    z-index: 101;
+    overflow: hidden;
+    transition: 0.7s;
+}
+
+.total_menu_z.active {
+    height: 100%;
+}
+
+.total_menu_z_in {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #334A51 url(../images/bg_total_logo.png) no-repeat 50% 50% / 576px auto;
+}
+.total_menu_z_in h1 {
+    display: none;
+}
+.total_menu_z_in h1 a {
+    color: #fff;
+}
+
+.total_menu {
+    width: 100%;
+    height: 100%;
+    border: 2px solid red;
+}
+ul.total_list {
+    position: absolute;
+    display: table;
+    top: 0;
+    left: 20%;
+    width: 60%;
+    height: 100%;
+    border: 2px solid yellow;
+}
+.total_list > li {
+    position: absolute;
+    display: table-cell;
+    top: 35%;
+}
+a.totalM_item {
+    color: #fff;
+    font-size: 2vw;
+    font-weight: 500;
+    border-bottom:2px solid transparent;
+    transition:0.4s;
+}
+.totalM_item:hover {
+    border-bottom: 2px solid #fff;
+}
+
+.totalSubItem_wrap {
+    padding-top: 60px;
+}
+ul.totalSubItem_List {}
+.totalSubItem_List > li {
+    margin-bottom: 20px;
+}
+a.totalSubItem {
+    font-size: 1.1vw;
+    color: #86a1a8;
+    font-weight: 500;
+    letter-spacing: -1px;
+}
+.totalSubItem:hover {
+    color: #65d8f8;
+}
+
+.total_item01 {
+    left: 0;
+}
+.total_item02 {
+    left: 30%;
+}
+.total_item03 {
+    right: 30%;
+}
+.total_item04 {
+    right: 0;
+}
+
+.total_adress_w {
+    position: absolute;
+    bottom: 10%;
+    left: 20%;
+    width: 60%;
+    color: #86a1a8;
+    border:2px solid coral;
+}
+.total_adress_w h2 {
+    font-size: 0.8vw;
+    margin-bottom: 15px;
+    font-weight: 500;
+}
+.total_adress_list {
+    display: table;
+}
+.total_adress_list > li {
+    display: table-cell;
+    font-size: 0.67vw;
+    padding-right: 70px;
+    line-height: 2;
+    font-weight: 300;
+}
+
+.totalClose_w {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 4.2vw;
+    width: 11%;
+}
+a.btn_totalClose {
+    display: flex;
+    align-items: center;
+    height: 100%;
+    width: 100%;
+    position: relative;
+    padding-left: 50%;
+}
+a.btn_totalClose::before, a.btn_totalClose::after {
+    position: absolute;
+    content: "";
+    width: 27%;
+    height: 1px;
+    left: 12%;
+    top: 50%;
+    background-color: #fff;
+
+}
+a.btn_totalClose::before {
+    transform: rotate(45deg);
+}
+a.btn_totalClose::after {
+    transform: rotate(-45deg);
+}
+span.btn_totalClose_in {
+    font-size:16px;
+    font-family:'Merriweather', serif;
+    color:#fff;
+}
+
 
 
 /*************** #fullpage ***************/
